# soplex

./: .cvsignore  .gitignore  .gitmodules  CHANGELOG  CHANGES  CMakeLists.txt  CMakePresets.json  CONTRIBUTING  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile.nmake  README  README.md  TODO  astylecfg  build_webdemo.sh  distrib.list  distrib.sh  format_code.sh  makedist.sh  runtest.sh  soplex-config.cmake.in  soplex-patch.txt  updatedates.sh  updateversion.sh
.github/workflows/: ci-sage.yml
.gitlab/merge_request_templates/: Code_Review.md  Default.md
bugs/: bug-uli-remove-col-2007-05-16.tgz  timo-segfaults.eml
check/: .cvsignore  CMakeLists.txt  bornd1.solu  bornd2.solu  borndoerfer.solu  borndoerfer.test  check.awk  check.netlib.soplex.aix.pwr4.ibm.opt.res  check.quick.soplex.aix.pwr4.ibm.dbg.res  check.sh  check_cluster.sh  check_cluster_perplex.sh  check_cluster_qsoptex.sh  check_legacy.sh  compare.py  configuration_cluster.sh  configuration_set.sh  cover.sh  cover.test  coverage.test  coverity.sh  evalcheck_cluster.sh  evaluation.py  evaluation.sh  exception.sh  exception.solu  fome.solu  fome.test  gondzio.solu  infeas.solu  kennington.solu  kennington.test  linux.x86.gnu.supp  make_solu_file.awk  make_solu_file.sh  miplib.solu  miplib.test  miplib2003.test  mittelbach.test  mittelmann.solu  (+19 more)
check/Results/: check.mittelbach.soplex.linux.alpha.compaq.opt.res  check.mittelbach.soplex.linux.x86.gnu.opt.res  check.mittelbach.soplex.osf1.alpha.compaq.opt.res  check.mittelmann.soplex.linux.x86.gnu.opt.res  check.mittelmann.soplex.osf1.alpha.compaq.opt.res  check.netlib.soplex.aix.pwr4.ibm.opt.res  check.netlib.soplex.hp-ux.hppa.hp.opt.res  check.netlib.soplex.irix.mips.sgi.opt.res  check.netlib.soplex.linux.alpha.compaq.opt.res  check.netlib.soplex.linux.alpha.gnu.opt.res  check.netlib.soplex.linux.x86.gnu.opt.res  check.netlib.soplex.osf1.alpha.compaq.opt.res  check.netlib.soplex.osf1.alpha.gnu.opt.res  check.netlib.soplex.sunos.sparc.sun.opt.res  check.normal.soplex.hp-ux.hppa.hp.opt.res  check.normal.soplex.irix.mips.sgi.opt.res  check.normal.soplex.irix.mips.sgi.std.res  check.normal.soplex.linux.alpha.compaq.opt.res  check.normal.soplex.linux.alpha.compaq.std.res  check.normal.soplex.linux.alpha.gnu.opt.res  check.normal.soplex.linux.x86.gnu.opt.res  check.normal.soplex.linux.x86.gnu.std.res  check.normal.soplex.linux.x86.intel.opt.res  check.normal.soplex.osf1.alpha.compaq.opt.res  (+21 more)
doc/: Makefile  builddoc.sh  soplex-vectors_overview.cpp  soplex.css  soplex.dxy  soplexfooter.html  soplexheader.html  soplexheader.php  xternal.cpp
extra/: Makefile.lpconv  Makefile.lpstat  OsiSpxSolverInterface.cpp  OsiSpxSolverInterface.hpp  OsiSpxSolverInterfaceTest.cpp  compile.sh  itfcplex.cpp  itfcplex.h  lpconv.cpp  lpconv.dep  lpstat.cpp  lpstat.dep  sipinput.cpp  siplp.cpp
lcov/: change_cover.sh  coverage.sh
license/: .cvsignore  frauenhofer.tex  monterey.tex  monterey2.tex  monterey_claim.tex  philips.tex  sitius.tex
lint/: soplex.lnt
make/: make.aix.pwr4.ibm.dbg  make.aix.pwr4.ibm.dbg.static  make.aix.pwr4.ibm.opt  make.aix.pwr4.ibm.opt.static  make.cygwin.0.x86.gnu.opt.static  make.cygwin.1.x86.gnu.opt.static  make.cygwin.gnu  make.cygwin.x86.gnu.dbg  make.cygwin.x86.gnu.dbg.static  make.cygwin.x86.gnu.opt  make.cygwin.x86.gnu.opt-gccold  make.cygwin.x86.gnu.opt.static  make.cygwin.x86_64.gnu.dbg  make.cygwin.x86_64.gnu.opt  make.cygwin.x86_64.gnu.opt-gccold  make.cygwin_nt-5.0.x86.gnu.opt  make.cygwin_nt-5.0.x86.gnu.opt.static  make.cygwin_nt-5.1.x86.gnu.opt  make.cygwin_nt-5.1.x86.gnu.opt.static  make.darwin.clang  make.darwin.gnu  make.darwin.gnu.dbg  make.darwin.gnu.opt  make.darwin.gnu.opt-gccold  make.darwin.intel  make.darwin.ppc.gnu.dbg  make.darwin.ppc.gnu.dbg.static  make.darwin.ppc.gnu.opt  make.darwin.ppc.gnu.opt.static  make.darwin.x86.gnu.dbg  make.darwin.x86.gnu.opt  make.darwin.x86.gnu.opt-shared  make.darwin.x86.intel.dbg  make.darwin.x86.intel.opt  make.darwin.x86_64.gnu.dbg  make.darwin.x86_64.gnu.opt  make.darwin.x86_64.gnu.opt-shared  make.darwin.x86_64.intel.dbg  make.darwin.x86_64.intel.opt  make.detecthost  (+154 more)
scripts/: format_code.sh  makedist.sh  updatedates.sh  updateversion.sh
settings/: decomp.set  decomp_compare.set  decomp_deftol.set  default.set  devex.set  exact-pure-boosting.set  steep.set
src/: CMakeLists.txt  array.h  basevectors.h  cachelpsolver.cpp  cachelpsolver.h  changesoplex.cpp  classarray.h  clufactor.cpp  clufactor.h  clufactor_rational.cpp  clufactor_rational.h  clumembers.h  cluprotos.h  clutypes.h  cmdline.cpp  cmdline.h  cring.h  ctimer.cpp  ctimer.h  dataarray.h  datahashtable.h  datakey.h  dataset.h  depend  depend.gmp  depend.legacy  depend.parascip  depend.rational  depend.zlib  didxset.cpp  didxset.h  docupdate.cpp  dsvector.cpp  dsvector.h  dsvectorbase.h  dvector.cpp  dvector.h  dvector_exact.cpp  dvector_exact.h  dvectorbase.h  (+211 more)
src/soplex/: args.hpp  array.h  basevectors.h  changesoplex.cpp  changesoplex.cpp.orig  changesoplex.hpp  classarray.h  classset.h  clufactor.cpp  clufactor.cpp.orig  clufactor.h  clufactor.h.orig  clufactor.hpp  clufactor_rational.cpp  clufactor_rational.h  clufactor_rational.hpp  config.h.in  cring.h  dataarray.h  dataarray.h.orig  datahashtable.h  datakey.h  datakey.h.orig  dataset.h  didxset.cpp  didxset.cpp.orig  didxset.h  dsvector.h  dsvectorbase.h  dsvectorbase.h.orig  dvector.h  dvectorbase.h  dvectorbase.h.orig  enter.cpp  enter.cpp.orig  enter.hpp  exceptions.h  fmt.hpp  gzstream.cpp  gzstream.h  (+212 more)
tests/: .cvsignore  Makefile  exercise_LP_changes.cpp  status_exception_test.cpp  test-async-term.cpp  testChangeElement.cpp  testChangeObjective.cpp  testCopyconsAssignmentfunc.cpp  testMemory.cpp  testRational.cpp
web/: commercial.html  greeting.txt  index.html  index.php  notes-120.txt  notes-121.txt  notes-130.txt  notes-131.txt  notes-140.txt  notes-141.txt  notes-142.txt  notes-150.txt  notes-160.txt  notes-170.txt  notes-171.txt  notes-172.txt  notes-200.txt  notes-201.txt  notes-220.txt  notes-221.txt  notes-300.txt  notes-301.txt  notes-310.txt  register.html  soplex.php
(+80 files in other folders)
